[package]
name = "using_stockfish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"
directories = "5.0.1"
tokio = { version = "1.29.1", features = ["full"] }
